@startuml entities

entity User {
  + pseudo: string notNull isUnique
  + email: string notNull isUnique
  + firstname: string 
  + lastname: string
  + birthday: datetime
  + address: string
  + zipcode: string
  + city: string
  + lat: string 10
  + lng: string 10
  + phone: string 
  + avatar: string
  + about: text
  + isVerified: bool
  + resetToken: string
  + createdAt: datetime notNull
  + lastConnAt: datetime notNull
  + slug: string notNull isUnique

  -- encrypted --
  + password: string
    
  -- not mapped --
  + plainPassword: string
  
  -- relations --
  + activities: Activity collection
  + myFriends: Friend collection 
  + friendsWithMe: Friend collection 
  + trips: Trip collection 
  + tripRequests: TripRequest collection
  + messages: Message collection
  + settings: Setting user
}

entity Setting {
  + isNewTripRequest: bool notNull
  + isNewMessage: bool notNull
  + isTripRequestStatusChange: bool notNull
  + isFriendNewTrip: bool notNull
  
  -- relations --
  + member: User settings
}

entity Friend {
  + status: string 10 notNull
  
  -- const --
  + FRIEND
  + BLOCKED
  
  -- relations --
  + member: User myFriends
  + friend: User friendsWithMe
}

entity Trip {
  + title: string notNull
  + dateAt: datetime notNull
  + description: text
  + lat: string 10 notNull
  + lng: string 10 notNull
  + isAvailable: bool
  
  -- relations --
  + member: User trips
  + activity: Activity trips
  + tripRequests: TripRequest collection
}

entity Message {
  + createdAt: datetime notNull
  + content: text notNull
  + isRead: bool notNull
  
  -- relations --
  + member: User messages
  + tripRequest: TripRequest messages
}

entity Activity {
  + name: string notNull
  + color: string
  
  -- relations --
  + trips: Trip collection
  + members: User collection
}

entity TripRequest {
  + status: string notNull
  
  -- const --
  + PENDING
  + ACCEPTED
  + REFUSED
        
  -- relations --
  + trip: Trip tripRequests
  + member: User tripRequests
  + messages: Message collection
}

User        "1" -- "m"      Friend : has
User        "1" -- "m"      Friend : is
User        "1" -- "m"      Trip : create
User        "1" -- "m"      TripRequest : create
User        "1" -- "m"      Message : write
User        "1" -- "1"      Setting : adjust his
User        "m" -- "m"      Activity : list his

Activity    "1" -- "m"      Trip : can have
Trip        "1" -- "m"      TripRequest : can have
TripRequest "1" -- "m"      Message : can have

@enduml